--- a/Noisy_DQN.ipynb
+++ b/Noisy_DQN.ipynb
@@ -34,7 +34,7 @@
         "import torch.autograd as autograd \n",
         "import torch.nn.functional as F\n",
         "\n",
-        "from sample_data.replay_buffer import PrioritizedReplayBuffer\n"
+        "from utils.replay_buffer import PrioritizedReplayBuffer\n"
       ],
       "execution_count": 36,
       "outputs": []
